<resources>
    <string name="app_name">LivrOrg</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="search_by">Search by</string>
    <string name="manually_add">Manually add</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="view_in_google_books">View in Google Books</string>
    <string name="aviso_remover_livro">Tem certeza que deseja remover \"%s\" da sua lista?</string>
    <string name="aviso_remover_comentario">Tem certeza que deseja remover esse comentário?</string>
    <string name="aviso_atualizar_finalizado">Deseja atualizar o estado do book para \"finalizado\"?</string>
    <string name="aviso_atualizar_lendo">Deseja atualizar o estado do book para \"lendo\"?</string>
    <string name="item_removido">%s foi removido</string>
    <string name="item_adicionado">%s foi adicionado à lista de desejos</string>
    <string name="undo">Desfazer</string>
    <string name="detalhes">Detalhes</string>
    <string name="detalhes_erro">Não foi possível carregar os detalhes do book</string>
    <string name="detalhes_erro_descricao">Não foi possível encontrar uma descrição para o book</string>
    <string name="detalhes_erro_categoria">Não foi possível encontrar uma categoria para o book</string>
    <string name="detalhes_erro_autor">Autor desconhecido</string>
    <string name="detalhes_erro_data_publicacao">date desconhecida</string>
    <string name="detalhes_erro_publicador">publicador desconhecido</string>
    <string name="detalhes_erro_maturidade">nenhuma classificação de maturidade disponível</string>
    <string name="nenhuma_tag">Nenhuma tag</string>
    <string name="score">Nota</string>
    <string name="score_no_score">Sem score</string>
    <string name="score_format">Nota: %d</string>
    <string name="comentarios">Comentários</string>
    <string name="comment">Comentário</string>
    <string name="estado_leitura_lendo">Lendo</string>
    <string name="estado_leitura_desejo">Lista de desejos</string>
    <string name="estado_leitura_desistido">Desistido</string>
    <string name="estado_leitura_finalizado">Finalizado</string>
    <string name="estado_leitura_em_espera">Em espera</string>
    <string name="add_lista">Adicionar à lista</string>
    <string name="loading">Carregando…</string>
    <string name="descricao">Descrição</string>
    <string name="desistencias">Desistências</string>
    <string name="favoritos">Favoritos</string>
    <string name="minha_colecao">Minha coleção</string>
    <string name="acervo">Acervo</string>
    <string name="finalizados">Finalizados</string>
    <string name="usuario">Usuário</string>
    <string name="password">Senha</string>
    <string name="registrarse">Registrar-se</string>
    <string name="bem_vindo">Bem-vindo</string>
    <string name="log_in">Entrar</string>
    <string name="log_out">Sair</string>
    <string name="login_erro_usuario_invalido">Insira um usuário válido</string>
    <string name="login_erro_usuario">Insira um name de usuário</string>
    <string name="login_erro_senha">Insira uma password</string>
    <string name="logging_in">Entrando…</string>
    <string name="confirmar_senha">Confirmar password</string>
    <string name="cadastrar_erro_senha">As senhas não correspondem</string>
    <string name="records">Registros</string>
    <string name="inicio_leitura">Início da leitura: %s</string>
    <string name="termino_leitura">Término da leitura: %s</string>
    <string name="categorias">Categorias</string>
    <string name="data_publicacao">Publicado em %1$s por %2$s</string>
    <string name="classificacoes">Classificações</string>
    <string name="classificacoes_format">Nota: %1$.1f/5,0\n(baseada em %2$d avaliações).\n\nClassificação de maturidade: %3$s</string>
    <string name="chapter">Capítulo</string>
    <string name="page">Página</string>
    <string name="comments_error">Ocorreu um erro ao exibir os comentários</string>
    <string name="erro">Erro</string>
    <string name="erro_text_fields">Algo deu errado ao coletar os dados, verifique os campos de text e tente novamente</string>
    <string name="comentario_salvo">Comentário salvo</string>
    <string name="comentario_falha_salvar">Falha ao salvar comentário</string>
    <string name="comentario_novo">Novo comentário</string>
    <string name="input_required">Preencha este campo</string>
    <string name="erro_sem_conexao">Você está offline</string>
    <string name="sobre">Sobre</string>
    <string name="configuracoes">Configurações</string>
    <string name="app_desc_curta">Organize sua biblioteca numa estante virtual</string>
    <string name="app_desc">LivrOrg permite a você adicionar livros a partir de um vasto acervo e organizá-los de acordo com o seu estado atual de leitura. Adicione, remova, atualize, favorite, comente, compartilhe, descubra!</string>
    <string name="add">Adicionar</string>
    <string name="search_no_book_found">Nehum book encontrado</string>
    <string name="hint_comentario">Digite alguma coisa…</string>
    <string name="estado_leitura">Estado de leitura</string>
    <string name="livro_adicionado">Livro adicionado</string>
    <string name="filtrar">Filtrar</string>
    <string name="usuario_invalido">Usuário ou password inválidos</string>
    <string name="menu">Menu</string>
    <string name="tap_target_pesquisa">Toque aqui para inserir o termo de pesquisa, use o botão %s do seu teclado para pesquisar</string>
    <string name="tap_target_pesquisar_por">Toque aqui para alterar o modo de pesquisa</string>
    <string name="tap_target_menu">Toque aqui para abrir o menu com seu catálogo organizado</string>
    <string name="tap_target_add">Toque aqui para procurar e adicionar um book</string>
    <string name="licencas_open_source">Licenças de código aberto</string>
    <string name="browser_failure">Could not start the browser: </string>
    <string name="favorite_a_book">Favorite a book</string>
</resources>
